[gd_scene load_steps=2 format=3 uid="uid://bjdjyv0wrgt7r"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_wr0jr"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wr0jr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -240.0
offset_right = 172.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.16616, 1.24242)
alignment = 1

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_Button")
focus_neighbor_bottom = NodePath("../Settings_Button")
text = "Start Game"

[node name="Settings_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start_Button")
focus_neighbor_bottom = NodePath("../Quit_Button")
text = "Settings"

[node name="Quit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings_Button")
focus_neighbor_bottom = NodePath("../Start_Button")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
